--- a/src/app/feature/components/sidenav-admin/sidenav-admin.component.scss
+++ b/src/app/feature/components/sidenav-admin/sidenav-admin.component.scss
@@ -41,3 +41,7 @@
 .scrollable-content::-webkit-scrollbar-corner {
   background-color: transparent; /* Esquinas transparentes */
 }
+
+a{
+  text-decoration: none;
+}
