--- a/src/app/feature/home/cursos/cursos.component.html
+++ b/src/app/feature/home/cursos/cursos.component.html
@@ -10,7 +10,7 @@
                 educativas y únete a nosotros en el camino hacia un futuro más sostenible.</p>
         </div>
         <div class="header-topic-colum image-topic">
-            <img src="../../../../assets/galeria-de-imagenes.png" alt="">
+            <img style="height: 70vh;" src="../../../../assets/person-learning-to-take-care-of-the-environment-upscaled.png" alt="">
         </div>
     </div>
 </div>
