--- a/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.html
+++ b/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.html
@@ -6,7 +6,7 @@
             <p>Por AMBIEFAC Academy</p>
         </div>
         <div class="header-topic-colum image-topic">
-            <img *ngIf="tema"  [src]="(verifyImage(tema.linkImage))?tema.linkImage: 'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png'" >
+            <img style="height: 70vh;" *ngIf="tema"  [src]="(verifyImage(tema.linkImage))?tema.linkImage: 'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png'" >
         </div>
     </div>
 </div>
