--- a/src/app/feature/academy/learning/components/exam/exam.component.html
+++ b/src/app/feature/academy/learning/components/exam/exam.component.html
@@ -1,9 +1,11 @@
 <div class="scrollable-main">
     <div class="flex flex-col items-center w-full px-[6%]">
         <form [formGroup]="examForm" >
-            <div *ngFor="let question of questions; let i = index" class="w-full m-4">
+            <div *ngFor="let question of questions; let i = index" class="w-full m-4 animate-fade-up animate-delay-100">
                 <p class="font-bold my-4">{{i+1 +". "+ question.questionStatement }}</p>
-                <div *ngFor="let answer of question.answers" class="m-2 border-1 bg-[#fbfbfb]">
+                <div *ngFor="let answer of question.answers" class="m-2 border-1 bg-[#fbfbfb]"
+                [class.correct-answer]="getResultAnswers()[i]?.correct && getResultAnswers()[i]?.id === answer.id"
+                [class.incorrect-answer]="!getResultAnswers()[i]?.correct && getResultAnswers()[i]?.id === answer.id">
                     <label class="flex flex-row items-center m-4">
                         <input type="radio" class="mx-4 form-checkbox checkbox-redondo text-[20px]" [formControlName]="'question' + question.questionsId" [value]="answer.id" />
                         {{answer.answerText }}
@@ -13,7 +15,12 @@
                     <p style="color: red;">Debes responder esta pregunta</p>
                 </div>
             </div>
-            <div class="w-full justify-center flex flex-row my-[10%]">
+            <div class="w-full justify-center flex flex-col my-[10%] text-[30px] items-center" *ngIf="resultAnswer.score !== undefined && resultAnswer.score > 0">
+                <p>Puntuación: </p>
+                <p>{{ getScore }}/{{ questions.length }}</p>
+                <button class="bg-[#01a01e] ml-4 text-white rounded-lg px-4 py-2" (click)="retryExam()">Volver a intentar</button>
+            </div>
+            <div class="w-full justify-center flex flex-row my-[10%] " *ngIf="resultAnswer.score === 0">
                 <button class="bg-[#01a01e] w-[100px] h-[40px] border-1 text-white rounded-lg shadow-lg" type="submit" (click)="onSubmit()">Enviar</button>
             </div>
         </form>
