--- a/src/app/feature/admin/contenido-curso/components/subtemas-curso/subtemas-curso.component.html
+++ b/src/app/feature/admin/contenido-curso/components/subtemas-curso/subtemas-curso.component.html
@@ -1,46 +1,50 @@
 <app-card-body [Titulo]='titulo' [linkBack]="'admin/consultar-curso'" [ButtonRigth]="addSubTema" [isSave]="false"
-  [tooltip]="'Nuevo contenido'" [tooltipBack]="'Volver'" >
-  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)"size = "medium"color = "#fff"type = "square-jelly-box"[fullScreen]="false">
+  [tooltip]="'Nuevo contenido'" [tooltipBack]="'Volver'">
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="square-jelly-box" [fullScreen]="false">
     <div class=" flex flex-col items-center">
       <div class="spinner-border" role="status">
       </div>
       <span class="text-white">Loading...</span>
     </div>
-    </ngx-spinner>
+  </ngx-spinner>
   <div class="flex flex-col border mb-4" *ngFor="let subtema of listSubtemas | pagination:currentPage:pageSize">
     <div class="flex flex-row justify-start items-center mb-2">
-      <img [src]="subtema.imageUrl ||'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png' " alt="Foto del subtema" class="w-16 h-16 rounded-md mx-4">
-      <h3 class="text-lg text-black font-semibold w-full cursor-pointer m-0 h-[40px]">{{ subtema.name }}</h3>
-      <div class="flex items-center justify-end ml-auto cursor-pointer" (click)="redirecToUpdateTema(subtema.id, subtema.name)">
-        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" class="mx-5" 
-        viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
-        <path
-        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
-      </svg>
+      <img [src]="subtema.imageUrl ||'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png' "
+        alt="Foto del subtema" class="w-16 h-16 rounded-md mx-4">
+      <h3 class="text-lg text-black font-semibold  cursor-pointer m-0 texto-recortado w-50 border-r-2">{{ subtema.name }}</h3>
+      <i class="fas fa-edit text-black mx-4 cursor-pointer" ngbTooltip="Actualizar subtema" (click)="onUpdate(subtema)"></i>
+      <i class="fas fa-trash text-black mx-2 cursor-pointer" ngbTooltip="Eliminar subtema" (click)="OnDelete(subtema.id)"></i>
+      <div class="flex items-center justify-end ml-auto cursor-pointer" ngbTooltip="Ver su informacion"
+        (click)="redirecToUpdateTema(subtema.id, subtema.name)">
+        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" class="mx-5"
+          viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+          <path
+            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+        </svg>
+      </div>
     </div>
   </div>
-</div>
-<div class="flex flex-col items-center">
-  <app-pagination [list]="listSubtemas" (currentPageChange)="handleCurrentPageChange($event)"></app-pagination>
- </div>
+  <div class="flex flex-col items-center">
+    <app-pagination [list]="listSubtemas" (currentPageChange)="handleCurrentPageChange($event)"></app-pagination>
+  </div>
 </app-card-body>
 
 <ng-template #modalContent>
-  <!-- Puedes colocar aquí cualquier contenido que desees -->
   <form [formGroup]="miFormulario" class="w-full flex flex-col items-center">
     <div class="m-2 w-[100%]">
       <label for="nombre-curso" class="block mb-2 text-sm font-medium text-gray-900">Nombre del subtema</label>
-      <input type="text" id="nombreCurso" formControlName="name"
+      <textarea id="nombreCurso" formControlName="name"
         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-        placeholder="Ejemplo: Gestión Sostenible de Residuos" required>
-        <div  *ngIf="miFormulario.get('name')?.invalid && miFormulario.get('name')?.touched">
-        <span  class="text-red-500 text-sm mt-1">Por favor, introduce el nombre del subtema.</span>
-        </div>
+        placeholder="Ejemplo: Gestión Sostenible de Residuos" required></textarea>
+      <div *ngIf="miFormulario.get('name')?.invalid && miFormulario.get('name')?.touched">
+        <span class="text-red-500 text-sm mt-1">Por favor, introduce el nombre del subtema.</span>
+      </div>
     </div>
     <div class="w-full ">
-      <button type="button" (click)="addTemas()" 
-      class="flex w-full justify-center rounded-md bg-[#22c55e] px-3 py-1.5 text-white font-semibold leading-6 text-white shadow-sm hover:bg-[#22c55eb8] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
-        Agregar</button>
+      <button type="button" (click)="addTemas()"
+        class="flex w-full justify-center rounded-md bg-[#22c55e] px-3 py-1.5 text-white font-semibold leading-6 text-white shadow-sm hover:bg-[#22c55eb8] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+        {{ selectedSubtema ? 'Actualizar' : 'Agregar' }}
+      </button>
     </div>
   </form>
 </ng-template>
