--- a/src/app/feature/auth/login/login.component.scss
+++ b/src/app/feature/auth/login/login.component.scss
@@ -26,6 +26,17 @@
 
     }
 }
+.back-button {
+    position: fixed;
+    top: 15%;
+    right: 35%;
+    cursor: pointer;
+    color: #fff;
+    font-size: 16px;
+    z-index: 100;
+
+   animation: rotate 5s infinite alternate linear;
+}
 
 .login {
     position: fixed;
@@ -56,7 +67,7 @@
         height: 100%;
         width: 50%;
         border-radius: 0;
-        padding-top: 240px;
+        padding-top: 200px;
     }
 
     >h2 {
@@ -219,6 +230,10 @@
 
 @media (min-width: 300px) and (max-width: 680px) {
 
+    .back-button {
+        top: 20%;
+        right: 70%;
+    }
     .input-group {
         width: 100%;
     }
