--- a/src/app/feature/auth/register/register.component.html
+++ b/src/app/feature/auth/register/register.component.html
@@ -7,8 +7,17 @@
                 <span class="input-group-addon">
                     <i class="fa fa-user"></i>
                 </span>
-                <input type="text" class="form-control-1" placeholder="name" formControlName="name">
-                <div *ngIf="campoTieneError('name')" placement="top" ngbTooltip="Correo electrónico no válido">
+                <input type="text" class="form-control-1" placeholder="Nombre de usuario" formControlName="username">
+                <div *ngIf="campoTieneError('username')" placement="top" ngbTooltip="Correo electrónico no válido">
+                    <i class="fa fa-exclamation-triangle text-danger"></i>
+                </div>
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="fa fa-user"></i>
+                </span>
+                <input type="text" class="form-control-1" placeholder="Nombres y apellidos" formControlName="fullName">
+                <div *ngIf="campoTieneError('fullName')" placement="top" ngbTooltip="Correo electrónico no válido">
                     <i class="fa fa-exclamation-triangle text-danger"></i>
                 </div>
             </div>
@@ -30,7 +39,7 @@
                     <i class="fa fa-exclamation-triangle text-danger"></i>
                 </div>
             </div>
-            <button type="button" (click)="logIn()">Registrar</button>
+            <button type="button" (click)="register()">Registrar</button>
         </form>
     </article>
     <article>
