--- a/src/app/feature/components/layout/layout.component.html
+++ b/src/app/feature/components/layout/layout.component.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <link
   rel="stylesheet"
@@ -9,9 +11,10 @@
         <app-navbar></app-navbar>
     </header>
     <main>
-        <router-outlet></router-outlet>
+      <ng-content></ng-content>
     </main>
     <footer>
         <app-footer></app-footer>
     </footer>
 </body>
+</html>
