--- a/src/app/feature/components/navbar/navbar.component.scss
+++ b/src/app/feature/components/navbar/navbar.component.scss
@@ -1,7 +1,16 @@
 /* src/app/navbar/navbar.component.scss */
 $font-family-poppins: 'Poppins', sans-serif;
 
+a{
+    text-decoration: none !important;
+}
+@media screen and (min-width: 768px) {
+    .dropdown-content {
+      display: none; 
+    }
+  }
 .nav_bar {
+    z-index: 10000;
     font-family: $font-family-poppins;
     background-color: #FFFFFF;
     padding: 0px 18px;
@@ -9,12 +18,13 @@ $font-family-poppins: 'Poppins', sans-serif;
     align-items: center;
     color: rgb(92, 64, 64);
     justify-content: space-between;
-    position: relative;
+    position: fixed;
+    width: 100%;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 
 
     .login-button {
-        display: block;
+        display: flex;
         position: relative;
         cursor: pointer;
 
@@ -51,9 +61,9 @@ $font-family-poppins: 'Poppins', sans-serif;
         background-image: url('../../../../assets/AMBIEFAC_LOGO.png');
         background-size: contain;
         background-repeat: no-repeat;
-        margin: 0 50px;
+        margin: 0 20px;
         height: 90px;
-        width: 150px;
+        width: 90px;
         cursor: pointer;
     }
 
@@ -113,6 +123,9 @@ $font-family-poppins: 'Poppins', sans-serif;
             border: none;
             filter: invert(63%) sepia(0%) saturate(747%) hue-rotate(173deg) brightness(96%) contrast(91%);
         }
+        .width-30{
+            width: 30%;
+        }
     }
 
     @media only screen and (max-width: 768px) {
@@ -130,6 +143,7 @@ $font-family-poppins: 'Poppins', sans-serif;
             width: 100%;
             height: 100rem;
             background-color: #ffffffdb;
+            z-index: 1000;
 
             .dropdown {
                 display: block;
@@ -184,6 +198,9 @@ $font-family-poppins: 'Poppins', sans-serif;
             margin: 10px 0;
             .button-search{
                 width: 10%;
+            }
+            .width-30{
+                width: 50%;
             }
         }
     }
