--- a/src/app/feature/home/inicio/inicio.component.scss
+++ b/src/app/feature/home/inicio/inicio.component.scss
@@ -1,12 +1,13 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  // padding-top: 20%;
 }
 
 section {
-    background-color: #f8f9fa;
-    margin: 6% 0;
+  background-color: #f8f9fa;
+  margin: 6% 0;
 }
 
 button:hover {
@@ -15,30 +16,39 @@ button:hover {
 
 /* Definición de la animación de sacudida */
 @keyframes sacudida {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: translateX(0);
   }
+
   25% {
     transform: translateX(-5px);
   }
+
   50% {
     transform: translateX(5px);
   }
+
   75% {
     transform: translateX(-5px);
   }
 }
 
-img{
-  max-width: 95%; 
-  height: 100%; 
-  object-fit: cover;
-}
+
 
 h1 {
-  font-size: 3rem;
+  font-size: 2.3rem;
   margin-bottom: 10px;
   font-weight: bold;
+}
+
+.text-header {
+  h1 {
+    font-size: 5.3rem;
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
 }
 
 h2 {
@@ -47,297 +57,81 @@ h2 {
   font-weight: normal;
 }
 
-p {
-  font-size: 1.2rem;
-  margin-bottom: 30px;
-  line-height: 1.5;
-}
+// p {
+//   font-size: 1.2rem;
+//   margin-bottom: 30px;
+//   line-height: 1.5;
+// }
 
-.home-content-header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 50px;
-    background-color: #fff;
-    color: #333;
-    border-bottom: solid 1px #33333324;
-    margin: 61px 0px 8% 0px;
 
-    .header-colum {
-        display: flex;
-        width: 50%;
-        padding: 20px;
-        flex-direction: column;
-        align-items: center;
-        ;
 
-        .header-colum-children {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
-            h1 {
-                font-size: 3rem;
-                margin-bottom: 10px;
-                font-weight: bold;
-            }
-
-            h2 {
-                font-size: 1.8rem;
-                margin-bottom: 20px;
-                font-weight: normal;
-            }
-
-            p {
-                font-size: 1.2rem;
-                margin-bottom: 30px;
-                line-height: 1.5;
-            }
-
-            .button-header {
-                width: 18rem;
-                height: 47px;
-                border-radius: 50px;
-                background-color: #33cc57;
-                color: #fff;
-                padding: 6px 0;
-                border: solid 1px #3333331c;
-                font-weight: bold;
-                box-shadow: 4px 5px 15px 2px rgb(0 0 0 / 0%);
-                -webkit-box-shadow: 4px 5px 15px 2px rgb(0 0 0 / 18%);
-                -moz-box-shadow: 4px 5px 15px 2px rgba(0, 0, 0, 0.75);
-                transition: background-color 0.3s;
-            }
-
-        }
-    }
-
-    img {
-        max-width: 70%;
-        max-height: 70%;
-        border-radius: 8px;
-    }
-
-    @media (max-width: 768px) {
-        flex-direction: column;
-
-        .header-colum {
-            width: 100%;
-            text-align: center;
-
-            h1 {
-                font-size: 2.5rem;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
-
-            p {
-                font-size: 1rem;
-            }
-        }
-    }
-}
-
-.info-content {
-    display: flex;
-    margin: 0% 0 15% 0;
-    flex-wrap: wrap;
-
-    .info-colum {
-        width: 100%;
-
-        @media (min-width: 768px) {
-            width: 50%;
-        }
-
-        .info-row {
-            margin-bottom: 20px;
-        }
-
-        .titulo {
-            h2 {
-                font-size: 2rem;
-                margin-bottom: 10px;
-                font-weight: bold;
-            }
-        }
-
-        .imagen img {
-            max-width: 70%;
-            height: auto;
-        }
-
-        .parrafo {
-            p {
-                font-size: 1rem;
-                line-height: 1.5;
-            }
-        }
-
-        .button-info {
-            background-color: #33CC57;
-            /* Green color */
-            color: #fff;
-            padding: 15px 20px;
-            border: none;
-            cursor: pointer;
-            font-weight: bold;
-            border-radius: 8px;
-            transition: background-color 0.3s;
-
-            &:hover {
-                background-color: #2ecc71;
-            }
-        }
-
-        /* Styles for info-1 */
-        .info-1 {
-            background-color: transparent;
-            display: flex;
-            justify-content: flex-end;
-            width: 100%;
-            height: 8rem;
-        }
-
-        /* Styles for info-2 */
-        .info-2 {
-            color: #fff;
-        }
-    }
-
-    .seccion-1 {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-
-    .seccion-2 {
-        background-color: #33CC57;
-    }
-}
 
 .content-comenzar {
-    height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-image: url('../../../../assets/galeria-de-imagenes.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    align-items: center;
-    margin: 12% 0px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url('../../../../assets/cuidadno_el_planeta.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  align-items: center;
+  margin: 12% 0px;
 
 
-    .comenzar-row {
-        text-align: center;
-        margin: 24px 0;
+  .comenzar-row {
+    text-align: center;
+    margin: 24px 0;
 
-        h2 {
-            font-size: 2rem;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        .ver-mas {
-            width: 18rem;
-            height: 47px;
-            border-radius: 50px;
-            background-color: #33cc57;
-            color: #fff;
-            padding: 6px 0;
-            border: solid 1px #3333331c;
-            font-weight: bold;
-            box-shadow: 4px 5px 15px 2px rgb(0 0 0 / 0%);
-            -webkit-box-shadow: 4px 5px 15px 2px rgb(0 0 0 / 18%);
-            -moz-box-shadow: 4px 5px 15px 2px rgba(0, 0, 0, 0.75);
-            transition: background-color 0.3s;
-
-            &:hover {
-                background-color: #2ecc71;
-            }
-        }
-    }
-}
-
-  // Estilos para el contenido de la sección
-  .explore-cursos-content {
-    max-width: 1200px;
-    margin: 0 auto;
-
-    // Estilos para la fila de cursos
-    .cursos-row {
-      text-align: center;
-      margin-bottom: 20px;
-
-      h2 {
-        font-size: 2rem;
-        color: #333;
-      }
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+      font-weight: bold;
     }
 
-    // Estilos para las tarjetas de cursos
-    .cursos-row.cards {
-      display: flex;
-      justify-content: space-around;
+    .ver-mas {
+      width: 18rem;
+      height: 47px;
+      border-radius: 50px;
+      background-color: #33cc57;
+      color: #fff;
+      padding: 6px 0;
+      border: solid 1px #3333331c;
+      font-weight: bold;
+      box-shadow: 4px 5px 15px 2px rgb(0 0 0 / 0%);
+      -webkit-box-shadow: 4px 5px 15px 2px rgb(0 0 0 / 18%);
+      -moz-box-shadow: 4px 5px 15px 2px rgba(0, 0, 0, 0.75);
+      transition: background-color 0.3s;
 
-      // Estilos para cada tarjeta
-      .cursos-colum {
-        width: 100px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        margin-right: 80px;
-        margin-bottom: 20px;
-
-        // Estilos para la imagen de la tarjeta
-        .card-imagen {
-          img {
-            width: 100%;
-            border-radius: 8px 8px 0 0;
-          }
-        }
-
-        // Estilos para el título de la tarjeta
-        .titulo-card {
-          padding: 15px;
-
-          h3 {
-            font-size: 1.5rem;
-            color: #333;
-          }
-        }
-
-        // Estilos para el párrafo de la tarjeta
-        .parrafo-card {
-          padding: 0 15px;
-          color: #666;
-
-          p {
-            font-size: 1rem;
-          }
-        }
-
-        // Estilos para el botón de la tarjeta
-        .button-card {
-          margin-top: 15px;
-
-          button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 1rem;
-
-            &:hover {
-              background-color: #45a049;
-            }
-          }
-        }
+      &:hover {
+        background-color: #2ecc71;
       }
     }
   }
+}
+
+.parallax-container {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+  background-image: url('../.../../../../../assets/Pantalla\ de\ fondo.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  /* Esto crea el efecto de parallax */
+}
+
+.floating-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px;
+  background-color: #33cc57;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none;
+}
+
+
